--- a/spotify_insight.ipynb
+++ b/spotify_insight.ipynb
@@ -2674,6 +2674,10 @@
    "cell_type": "code",
    "execution_count": 260,
    "source": [
+    "\"\"\"\r\n",
+    "Ordenando os dados por Popularidade e tirando os dados vazios\r\n",
+    "\"\"\"\r\n",
+    "\r\n",
     "df[['Song Name', 'Artist', 'Popularity']].sort_values(['Popularity']).dropna()"
    ],
    "outputs": [
